dsa program added & refactor code